<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Re:Active</string>
    <string name="action_settings">Settings</string>

    <string name="default_user_login">Gość</string>
    <string name="default_user_name">Profil</string>
    <string name="default_user_surname">domyślny</string>

    //activity_admin
    <string name="activity_admin_Label_Login">Login:</string>
    <string name="activity_admin_White_Login">Login</string>
    <string name="activity_admin_Label_Name">Imię:</string>
    <string name="activity_admin_White_Name">Imię</string>
    <string name="activity_admin_White_Surname">Nazwisko</string>
    <string name="activity_admin_Label_Surname">Nazwisko:</string>
    <string name="activity_admin_Button_LoginUser">Zaloguj</string>
    <string name="activity_admin_Button_AddUser">Dodaj</string>
    <string name="activity_admin_Button_DeleteUser">Usuń</string>

    <string name="add_user_information">Dodano użytkownika </string>
    <string name="delete_user_information">Usunięto użytkownika </string>
    <string name="busy_login_information">Użytkownik o danym loginie już istnieje</string>
    <string name="empty_fields_information">Aby dodać nowego użytkownika wypełnij wszystkie pola</string>
    <string name="choose_user_information">Wybierz użytkownika</string>

    //activity_level_selection
    <string name="activity_level_selection_Main_Label">Wybierz poziom</string>

    //dialog_password
    <string name="dialog_password_Message">Podaj hasło do panelu administratora</string>
    <string name="dialog_password_Label_Password">Hasło</string>
    <string name="dialog_password_Positive_Button_Text">OK</string>
    <string name="dialog_password_Password">admin</string>

    //GameFinishedSummaryDialog.java
    <string name="game_finished_summary_dialog_message">Brawo! Wygrywasz całą grę!</string>
    <string name="game_finished_summary_dialog_negative_button">Ukończ</string>

    //LevelPassedSummaryDialog.java
    <string name="level_passed_summary_dialog_message">Poziom pomyślnie ukończono </string>
    <string name="level_passed_summary_dialog_positive_button">Następny poziom</string>
    <string name="level_passed_summary_dialog_negative_button">Wróc do menu</string>

    //LevelStartDialog.java
    <string name="instruction">W następnym poziomie klikaj na</string>

    //LevelFailedSummaryDialog.java
    <string name="level_failed_summary_dialog_message">Spróbuj ponownie! Tym razem uzyskałeś </string>
    <string name="level_failed_summary_dialog_positive_button">Powtórz poziom</string>
    <string name="level_failed_summary_dialog_negative_button">Wróc do menu</string>

    //activity_main_menu
    <string name="user_prefix">Zalogowano jako: </string>
    <string name="btnSeeResults_text">Zobacz postępy</string>

    // LineGraph.java
    <string name="graph_training_day">Dzień ćwiczeń</string>
    <string name="graph_points">Punkty</string>


</resources>
