<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/tapeta">
    <ListView
        android:id="@+id/lvUsers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2" >
    </ListView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_admin_margin"
        android:layout_marginLeft="@dimen/activity_admin_margin"
        android:layout_marginRight="@dimen/activity_admin_margin"
        android:orientation="vertical"
        android:layout_weight="1" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_admin_margin_between"
            android:id="@+id/linear1" >
            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/activity_admin_textSize"
                android:layout_weight="3"
                android:text="@string/activity_admin_Label_Login" />
            <EditText
                android:id="@+id/etLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/activity_admin_textSize"
                android:layout_weight="2"
                android:clickable="true"
                android:hint="@string/activity_admin_White_Login"
                android:linksClickable="true"
                android:importantForAccessibility="yes"
                android:singleLine="true" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_admin_margin_between"
            android:layout_below="@+id/linear1"
            android:id="@+id/linear2" >
            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/activity_admin_textSize"
                android:layout_weight="3"
                android:text="@string/activity_admin_Label_Name" />
            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/activity_admin_textSize"
                android:layout_weight="2"
                android:clickable="true"
                android:hint="@string/activity_admin_White_Name"
                android:capitalize="words"
                android:singleLine="true" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_admin_margin_between"
            android:layout_below="@+id/linear2"
            android:id="@+id/linear3" >
            <TextView
                android:id="@+id/tvSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/activity_admin_textSize"
                android:layout_weight="3"
                android:text="@string/activity_admin_Label_Surname" />
            <EditText
                android:id="@+id/etSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/activity_admin_textSize"
                android:layout_weight="2"
                android:clickable="true"
                android:hint="@string/activity_admin_White_Surname"
                android:singleLine="true"
                android:capitalize="words" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textSize="20sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/linear3"
            android:id="@+id/linear4" >
            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginRight="10dp"
                android:textSize="@dimen/activity_admin_button_textSize"
                android:background="@color/btnLoginUser"
                android:text="@string/activity_admin_Button_LoginUser" />
            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="@dimen/activity_admin_button_textSize"
                android:background="@color/btnAddUser"
                android:text="@string/activity_admin_Button_AddUser" />
            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:textSize="@dimen/activity_admin_button_textSize"
                android:background="@color/btnDeleteUser"
                android:text="@string/activity_admin_Button_DeleteUser" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
